@@ -15,6 +15,10 @@ import com.l1yp.model.param.modeling.option.ModelingOptionTypeUpdateParam;
 import com.l1yp.model.view.modeling.ModelingOptionTypeView;
 import com.l1yp.service.modeling.IModelingOptionTypeService;
 import com.l1yp.util.BeanCopierUtil;
+import org.springframework.cache.Cache;
+import org.springframework.cache.CacheManager;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
@@ -30,7 +34,11 @@ public class ModelingOptionTypeServiceImpl extends ServiceImpl<ModelingOptionTyp
     @Resource
     ModelingOptionValueServiceImpl workflowOptionValueService;
 
+    @Resource
+    CacheManager cacheManager;
+
     @Override
+    @Cacheable(cacheNames = "option_types", key = "#p0.scope + ':' + #p0.mkey")
     public List<ModelingOptionTypeView> findTypes(ModelingOptionTypeFindParam param) {
         LambdaQueryWrapper<ModelingOptionType> wrapper = Wrappers.lambdaQuery();
         wrapper.eq(ModelingOptionType::getScope, param.getScope());
@@ -39,11 +47,12 @@ public class ModelingOptionTypeServiceImpl extends ServiceImpl<ModelingOptionTyp
             wrapper.eq(ModelingOptionType::getMkey, param.getMkey());
         }
         List<ModelingOptionType> modelingOptionTypes = getBaseMapper().selectList(wrapper);
-        return modelingOptionTypes.stream().map(ModelingOptionType::toView).toList();
+        return modelingOptionTypes.stream().map(ModelingOptionType::toView).collect(Collectors.toList());
     }
 
     @Override
     @Transactional
+    @CacheEvict(cacheNames = "option_types", key = "#p0.scope + ':' + #p0.mkey")
     public void addType(ModelingOptionTypeAddParam param) {
         ModelingOptionType modelingOptionType = new ModelingOptionType();
         BeanCopierUtil.copy(param, modelingOptionType);
@@ -53,13 +62,27 @@ public class ModelingOptionTypeServiceImpl extends ServiceImpl<ModelingOptionTyp
     @Override
     @Transactional
     public void updateType(ModelingOptionTypeUpdateParam param) {
+        ModelingOptionType optionType = getById(param.getId());
+        if (optionType == null) {
+            throw new VanException(404, "选项类型不存在");
+        }
         ModelingOptionType modelingOptionType = new ModelingOptionType();
         BeanCopierUtil.copy(param, modelingOptionType);
         updateById(modelingOptionType);
+
+        Cache cache = cacheManager.getCache("option_types");
+        if (cache != null) {
+            cache.evict(optionType.getScope() + ":" + optionType.getMkey());
+        }
+
     }
 
     @Override
     public void deleteType(String id) {
+        ModelingOptionType optionType = getById(id);
+        if (optionType == null) {
+            throw new VanException(404, "选项类型不存在");
+        }
         int count = getBaseMapper().countOfOptionFieldRef(id);
         if (count > 0) {
             List<ModelingField> workflowFieldDefs = getBaseMapper().selectOptionFieldRef(id);
@@ -69,6 +92,11 @@ public class ModelingOptionTypeServiceImpl extends ServiceImpl<ModelingOptionTyp
 
         removeById(id);
         workflowOptionValueService.remove(Wrappers.<ModelingOptionValue>lambdaQuery().eq(ModelingOptionValue::getTypeId, id));
+
+        Cache cache = cacheManager.getCache("option_types");
+        if (cache != null) {
+            cache.evict(optionType.getScope() + ":" + optionType.getMkey());
+        }
 
     }
 }
